<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/module_include_titlebar" />

    <FrameLayout
        android:id="@+id/fl_main_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>

    <View style="@style/view_line_horizontal_05" />

    <LinearLayout

        android:id="@+id/ll_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="9dp"
        android:paddingBottom="6dp">

        <LinearLayout
            android:id="@+id/ll_tag_receivable"
            style="@style/botttom_tag_ll_style">

            <TextView
                android:id="@+id/tv_tag_receivable_icon"
                style="@style/botttom_tag_tv_icon_style"
                android:text="@string/icon_main_pay" />

            <TextView
                android:id="@+id/tv_tag_receivable"
                style="@style/botttom_tag_tv_style"
                android:padding="2dp"
                android:text="收款" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tag_turnover"
            style="@style/botttom_tag_ll_style">

            <TextView
                android:id="@+id/tv_tag_turnover_icon"
                style="@style/botttom_tag_tv_icon_style"
                android:text="@string/icon_main_turnover" />

            <TextView
                android:id="@+id/tv_tag_turnover"
                style="@style/botttom_tag_tv_style"
                android:padding="3dp"
                android:text="流水" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tag_more"
            android:visibility="gone"
            style="@style/botttom_tag_ll_style">

            <TextView
                android:id="@+id/tv_tag_more_icon"
                style="@style/botttom_tag_tv_icon_style"
                android:text="@string/icon_main_more" />

            <TextView
                android:id="@+id/tv_tag_more"
                style="@style/botttom_tag_tv_style"
                android:padding="3dp"
                android:text="更多" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tag_mine"
            style="@style/botttom_tag_ll_style">

            <TextView
                android:id="@+id/tv_tag_mine_icon"
                style="@style/botttom_tag_tv_icon_style"
                android:text="@string/icon_main_mine" />

            <TextView
                android:id="@+id/tv_tag_mine"
                style="@style/botttom_tag_tv_style"
                android:padding="3dp"
                android:text="我的" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
