<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@color/bg_main_top_gray"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_payfor_payfor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            >

            <TextView
                android:id="@+id/tv_payfor_payfor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/icon_main_payfor_pay"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_payfor_payfor"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="收款"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rv_payfor_kaidan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_payfor_kaidan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"

                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/icon_main_payfor_kaidan"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_payfor_kaidan"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="开单"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rv_payfor_turnover"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_payfor_turnover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/icon_main_payfor_turnover"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_payfor_turnover"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="统计"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

    </LinearLayout>

    <GridView
        android:id="@+id/gv_payfor_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:columnWidth="80dp"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:stretchMode="spacingWidthUniform"></GridView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="今日实收金额"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rv_payfor_shishoujine"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10.5"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="元"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="今日订单数"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rv_payfor_dingdanshu"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="单"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <com.youth.banner.Banner
            android:id="@+id/bn_payfor_banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.youth.banner.Banner>
    </LinearLayout>

</LinearLayout>